--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 25px;
   right: 0px;
-  z-index: 11;
+  z-index: 5;
   cursor: pointer;
   text-align: center;
   opacity: 0.5;
